Latest news on the package:     HieRanFo




------------------------------------------------------
26.  ==> 25 Feb. 2015
Figures that appear in the help file were copied into a sub folder under:
man/figures/tex/latex
and a path was added and refereshed in MikTEx. 
This is done to solve errors in CMD check tht could not locate the files

------------------------------------------------------
25.  ==> 25 Feb. 2015
In functions using ggplot2, 
arguments such as X.min <- NULL 
were added to avoid CMD check errors:
No visible binding for global variable Note in R CMD check

------------------------------------------------------
24.  ==> 25 Feb. 2015
ggplot2 and randomForest were added under @import in relevant function

------------------------------------------------------
23.  ==> 25 Feb. 2015
An R file conatinaing the roxygen code the package desciption was created 
a small change in the description file

------------------------------------------------------
22.  ==> 23 Feb. 2015
in plot.HRF , the input param:  hie.RF changed to x
in predict.HRF , the input param:  hie.RF changed to object
------------------------------------------------------
21.  ==> 17 Feb. 2015
RandomHRF - now returns NA for train.data or new.data if cases.t.node.train or cases.t.node.new are set to 0.

------------------------------------------------------
20.  ==> 16 Feb. 2015
Figures added to some help files:
  1. formulas for HieFMEasrue
  2. example with a simple hierarchy for PerformanceHRF

------------------------------------------------------
19.  ==> 13 Feb. 2015
in PerformanceFlatHRf
Change to output list
1. train.flat.cas was removed and the observed terminal node was added as one additional column at the end of crisp.case.class
2. The varioues data frame that holds the performance measure are now returned as a single data frame under hie.performance

------------------------------------------------------
18.  ==> 13 Feb. 2015
Function RandomHRF: 