@@ -15,9 +15,9 @@ export(RandomHRF)
 export(RunHRF)
 export(tuneRF2)
 exportClasses(HRF)
+import(caret)
 import(ggplot2)
 import(pdfCluster)
 import(randomForest)
-importFrom(caret,confusionMatrix)
 importFrom(reshape,melt)
 importFrom(treemap,random.hierarchical.data)
