@@ -253,7 +253,6 @@
 #'   
 #'   
 #'   
-#' @aliases randomForest
 #' @export
 #' @exportClass HRF
 #' @import randomForest 
