@@ -1,7 +1,6 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/plot.HRF.R
 \name{plot.HRF}
-\alias{plot}
 \alias{plot.HRF}
 \title{Plot the Hierarchical class structure}
 \usage{
@@ -77,7 +76,7 @@ The function returns a plot. If the function is saved to a new
 }
 \description{
 This function takes as input an object of class \code{"HRF"}, and plots the
-structure of the class hierarhcy
+structure of the class hierarchy.
 }
 \details{
 Based on \code{\link{ggplot2}}, the function plots the class
