@@ -1,7 +1,6 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/predict.HRF.R
 \name{predict.HRF}
-\alias{predict}
 \alias{predict.HRF}
 \title{For all cases, the proportion of OOB votes that each class received in
 each local randomForest classifier.}
