@@ -1,7 +1,6 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/tuneRF2.R
 \name{tuneRF2}
-\alias{tuneRF}
 \alias{tuneRF2}
 \title{the tuneRF function of randomForest after correcting for error relating to
 errorOld=0}
